[package]
name = "worldgencli"
version = "0.1.0"
authors = ["Alexander Wauck <waucka@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simdnoise = "3.1"
image = "0.23"
clap = "2.33"
rand = { version = "0.8", features = ["small_rng"] }
nalgebra = "0.26"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_cbor = "0.11"
mlua = { version = "0.5", features = ["luajit"] }
worldgenlib = { path = "../worldgenlib" }
